# VKTest_friendship

./: .gitignore  README.md  docker-compose.yaml  example.env
backend/: Dockerfile  entrypoint.sh
backend/app/: pyproject.toml  schema.yml
backend/app/authserver/: models.py  serializers.py  tests.py  urls.py  views.py
backend/app/authserver/migrations/: 0001_initial.py
backend/app/core/: settings.py  urls.py
backend/app/friends/: models.py  tests.py  urls.py  views.py
backend/app/friends/migrations/: 0001_initial.py  0002_remove_friendrequest_status_and_more.py  0003_friendrequest_answered_on.py  0004_alter_friendrequest_answered_on.py
